# essentials

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
include/: essentials.hpp
test/: CMakeLists.txt  allocator.cpp  data_structure.cpp  directory.cpp  general_test.cpp  json_lines.cpp  mmap_example.cpp  timer.cpp
